--- a/app/Resources/views/default/show.html.twig
+++ b/app/Resources/views/default/show.html.twig
@@ -1,15 +1,18 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}{{ restaurante.nombre }}{% endblock %}
+
 {% block body %}
-<div class="card mb-3">
-  <img src="{{ asset('images/restaurante1.jpg') }}" class="card-img-top" alt="...">
+
+ <div class="card mb-3">
+  <img src="{{ asset("images/restaurante#{restaurante.id}.jpg") }}" class="card-img-top" alt="restaurante">
   <div class="card-body">
-    <h5 class="card-title">Welcome to Madrid!</h5>
+    <h5 class="card-title">Welcome to {{ restaurante.localidad }}!</h5>
     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <a href="/restaurantes">Go Back</a>
   </div>
 </div>
-
 {% endblock %}
 
 {% block stylesheets %}
