--- a/app/Resources/views/default/login.html.twig
+++ b/app/Resources/views/default/login.html.twig
@@ -2,11 +2,14 @@
 
 {% block body %}
 
-  {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-  {% endif %}
 
-
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-6">
+      {% if error %}
+        <div class="alert alert-danger text-center mt-5" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+      {% endif %}
+    </div>
+  </div>
   <div class="row d-flex justify-content-center">
     <div class="col-md-6">
       <h1 class="my-5 text-center">Login</h1>
