--- a/app/Resources/views/default/login.html.twig
+++ b/app/Resources/views/default/login.html.twig
@@ -13,6 +13,7 @@
   <div class="row d-flex justify-content-center">
     <div class="col-md-6">
       <h1 class="my-5 text-center">Login</h1>
+      <p>No tienes usuario? <a href="{{ path('registro') }}">Resgistrate</a></p>
     </div>
   </div>
   <div class="row d-flex justify-content-center">
