--- a/app/Resources/views/default/registro.html.twig
+++ b/app/Resources/views/default/registro.html.twig
@@ -5,6 +5,7 @@
   <div class="row d-flex justify-content-center">
     <div class="col-md-6">
       <h1 class="my-5">Registration Form</h1>
+      <p>Ya estas registrado? <a href="{{ path('login') }}">Login</a></p>
     </div>
   </div>
   <div class="row d-flex justify-content-center">
