--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,6 +22,9 @@
           <a class="nav-link" href="{{ path('addRestaurantes') }}">Agregar Restaurante</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{{ path('addComida') }}">Agregar Platos</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{ path('logout') }}">Logout</a>
         </li>
         {% endif %}
