--- a/app/Resources/views/default/show.html.twig
+++ b/app/Resources/views/default/show.html.twig
@@ -4,12 +4,32 @@
 
 {% block body %}
 
- <div class="card mb-3">
-  <img src="{{ asset("images/restaurante#{restaurante.id}.jpg") }}" class="card-img-top" alt="restaurante">
+ <div class="card my-3">
+  {# <img src="{{ asset("images/restaurante#{restaurante.id}.jpg") }}" class="card-img-top" alt="restaurante"> #}
+  {% if restaurante.localidad == 'Valencia' %}
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d163384.48099558437!2d-0.5015973548003727!3d39.407701249862185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd604f4cf0efb06f%3A0xb4a351011f7f1d39!2sValencia!5e1!3m2!1ses-419!2ses!4v1570789938397!5m2!1ses-419!2ses" width="auto" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    {% elseif restaurante.localidad == 'Madrid' %}
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d160944.54855818025!2d-3.8196225420509498!3d40.43786975724173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422997800a3c81%3A0xc436dec1618c2269!2sMadrid!5e1!3m2!1ses-419!2ses!4v1570790234642!5m2!1ses-419!2ses" width="auto" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    {% elseif restaurante.localidad == 'Barcelona' %}
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d79315.76372100262!2d2.0787274893759387!3d41.394768814322994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a49816718e30e5%3A0x44b0fb3d4f47660a!2sBarcelona!5e1!3m2!1ses-419!2ses!4v1570790254167!5m2!1ses-419!2ses" width="auto" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    {% else %}
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10388602.767423837!2d-12.711411028558283!3d39.85905320249867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc42e3783261bc8b%3A0xa6ec2c940768a3ec!2zRXNwYcOxYQ!5e1!3m2!1ses-419!2ses!4v1570790292462!5m2!1ses-419!2ses" width="auto" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+  {% endif %}
   <div class="card-body">
     <h5 class="card-title">Welcome to {{ restaurante.localidad }}!</h5>
     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <p class="card-text">
+    <small class="text-muted">
+    <h5>Menu</h5>
+    <ul>
+    
+      {% for comida in comidas %}
+        {% if restaurante.id == comida.restaurante.id %}
+        <li> {{ comida.nombre }}</li> <span>{{ comida.descripcion }}</span>
+        {% endif %}
+      {% endfor %}
+    </ul>
+    </small></p>
     <a href="/restaurantes">Go Back</a>
   </div>
 </div>
